Polishing My website

--- a/Miami.html
+++ b/Miami.html
@@ -5,24 +5,25 @@
 </head>
 <body>
   <div class="content-wrapper">
-    <h1>Miami Resort</h1>
-    <h2>A place you Belong
-    <img src="/home/mwaura/Documents/Resort-Website/resort.jpg" alt="A photo of resort">
+    <h1>Miami Resort...</h1>
+    <h2>A place you Belong.
+    <img src="/home/mwaura/Documents/Resort-Website/resort2.jpg" alt="A photo of resort">
      </h2>
      <div class="text-wrapper">
   <p>This is a place where you dreams will come true,luxury room, Big swimming pools and All kinds of Foods that will make your vacation Magical</p>
    <p>Customers receive their bill on beautiful, gold thermographed letterheadings printed on woven, heavyweight paper</p>
-
-  <ul>
-    <strong>
-    <li>Accommodations</li>
-    <li>Activities</li>
-    <li>Travel arrangements</li>
-    <li>Contact information</li>
-    <li>pictures, etc.</li>
-    </strong>
-  </ul>
+   <ul>
+     <strong>
+     <li><a href="accomodation.html"> Accomodation </a>s</li>
+     <li><a href="activities.html"> Activities </a>s</li>
+     <li><a href="Travel arrangements.html"> Travel arrangements</a>s</li>
+     <li><a href="Contact Information.html">Contact Information</a>s</li>
+      <li><a href="Pictures.html">Pictures,etc.</a>s</li>
+     </strong>
+   </ul>
+   </div>
+    <p><strong>What you'l find here? ,</strong>is a full service holiday lodging facility, located at the seaside, with access to a private beach. The beach being the primary focus for tourists. A Beach Resort offers a wide range of services and amenities and typically includes entertainment and recreational activities.  As a self-contained establishment, a Beach Resort provides for most of a vacationer’s needs while remaining on the premises (lodging, food, drink, sports, entertainment, shopping, etc.).
   </div>
-  </div>
+  <br></br>The benefits of booking a Beach Resort are that the guest finds not only the proximity to the beach but also an all-around service within the premises. It is convenient for families, offering kids-club, evening entertaining program, shopping etc. In cases the Resort is located far away from the city, the Resort provides all the infrastructure needed (it is a ‘village’ itself). Often a Beach Resort is used as a wedding location (with a beach setting ceremony, wedding planner on side, a photographer, a hairdresser and a beauty salon etc.). </p>
 </body>
 </html>
