Changed the loaction of pictures

--- a/Pictures.html
+++ b/Pictures.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+<html>
   <head>
-    <title> Branching Practice Site </title>
+    <title> MIAMI RESORT</title>
     <link href="/home/mwaura/Documents/Resort-Website/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1> PICTURES </h1>
     <h2><strong>We believe in providing the Best services to our Customers</strong></h2>
-    <img src="/home/mwaura/Documents/Resort-Website/food.jpeg" alt="Food">
-    <img src="/home/mwaura/Documents/Resort-Website/resort.jpg" alt="Swimming pools and lounges">
-    <img src="/home/mwaura/Documents/Resort-Website/resort2.jpg" alt="A photo of resort">
+    <img src="/home/mwaura/Documents/Resort-Website/pictures/food.jpeg" alt="Food">
+    <img src="/home/mwaura/Documents/Resort-Website/pictures/resort.jpg" alt="Swimming pools and lounges">
+
     <p> <strong>This and much more!</strong>  </p>
   </body>
 </html>
