Changes from Miami.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div class="content-wrapper">
-    <h1>Miami Resort...</h1>
+    <h1>Miami Resort</h1>
     <h2>A place you Belong.
     <img src="/home/mwaura/Documents/Resort-Website/pictures/resort2.jpg" alt="A photo of resort">
      </h2>
